--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=api
+#Enable deferred datasource initialization
+spring.jpa.defer-datasource-initialization=true
+
+#Execute SQL scripts during application startup
+spring.sql.init.mode=always
