--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,17 @@ dependencies {
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 }
 
+jar {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+	manifest {
+		attributes 'Main-Class': 'com.booleanuk.api.Main'
+	}
+
+	from {
+		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
